--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Voting System | www.ovs.com</title>
+    <title>Online Voting System | OVS</title>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -13,7 +13,7 @@
 <body>
 
     <section id="header-section">
-        <h1>Online Voting System Updated</h1>
+        <h1>Online Voting System</h1>
     </section>
     <hr>
 
